--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 This is README file for 'Command line parameters parser (CLPP)' library.
 
-Last update: March 15, 2010
+Last update: March 17, 2010
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 COMMAND LINE PARAMETERS PARSER
@@ -34,6 +34,8 @@ HTML documentation in 'doc' directory.
 
 MORE INFORMATION
 ----------------
+
+Download from:		http://sourceforge.net/projects/clp-parser/
 
 Sourceforge page: 	http://clp-parser.sourceforge.net
 
