--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 This is README file for 'Command line parameters parser (CLPP)' library.
 
-Last update: March 17, 2010
+Last update: March 20, 2010
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 COMMAND LINE PARAMETERS PARSER
-version 0.9.3
+version 1.0rc
 
 ABSTRACT
 --------
