--- a/INSTALL
+++ b/INSTALL
@@ -1,11 +1,11 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 This is INSTALL file for 'Command line parameters parser (CLPP)' library.
 
-Last update: March 15, 2010
+Last update: March 20, 2010
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 COMMAND LINE PARAMETERS PARSER
-version 0.9.3
+version 1.0rc
 
 Installing not required. Just copy 'clpp' folder in some place where your compiler searches header files and add:
  
