--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 This is README file for 'Command line parameters parser (CLPP)' library.
 
-Last update: March 20, 2010
+Last update: April 24, 2010
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 COMMAND LINE PARAMETERS PARSER
-version 1.0rc
+version 1.0
 
 ABSTRACT
 --------
@@ -34,8 +34,6 @@ HTML documentation in 'doc' directory.
 
 MORE INFORMATION
 ----------------
-
-Download from:		http://sourceforge.net/projects/clp-parser/
 
 Sourceforge page: 	http://clp-parser.sourceforge.net
 
